<resources>
    <string name="app_name">AdminUsersApp</string>
    <string name="welcome_to_admin_user_app">WELCOME TO ADMIN USER APP</string>
    <string name="login">Login</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="register">Register</string>
    <string name="admin"><![CDATA[Admin >]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="welcome">WELCOME</string>
    <string name="textview">TextView</string>
    <string name="username_email_password">Username - Email - Password</string>
    <string name="admin_pannel">ADMIN PANNEL</string>
</resources>